--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,9 @@
 <% provide(:title, 'Sign up') %>
+<% provide(:button_text, 'Create Account') %>
+<% provide(:url, signup_path) %>
 <h1>Sign up</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user, url: signup_path) do |f| %>
-      <%= render 'shared/error_messages' %>
-      <%= f.label(:name) %><br>
-      <%= f.text_field(:name, class: "form-control") %><br>
-      <%= f.label(:email) %><br>
-      <%= f.text_field(:email, class: "form-control") %><br>
-      <%= f.label(:password) %><br>
-      <%= f.password_field(:password, class: "form-control") %><br>
-      <%= f.label(:password_confirmation) %><br>
-      <%= f.password_field(:password_confirmation, class: "form-control") %><br>
-      <%= f.submit("Create Account", class: "btn btn-primary") %><br>
-    <% end %>
+    <%= render 'form' %>
   </div>
 </div>
