--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@user, url: yield(:url)) do |f| %>
-  <%= render 'shared/error_messages', object: @user %>
+  <%= render 'shared/error_messages', object: f.object %>
   <%= f.label(:name) %><br>
   <%= f.text_field(:name, class: "form-control") %><br>
   <%= f.label(:email) %><br>
