--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,4 +14,13 @@ Current Time: <%= Time.now %><br>
       </h1>
     </section>
   </aside>
+  <div class="col-md-8">
+    <% if @user.microposts.any? %>
+      <h3>Microposts (<%= @user.microposts.count %>)</h3>
+      <ol class="microposts">
+        <%= render @microposts %>
+      </ol>
+      <%= will_paginate @microposts %>
+    <% end %>
+  </div>
 </div>
